-Added the following monuments and associated events: Kaiserdom of Speyer, Polish Royal Salt Mines, Winter Palace of Neva, Aleppo Citadel, Tsarevets of Tarnovo
-Overhauled the following custom event sets: Baltic Pagan
-Eliminated generic unit models for many cultures when owning the respective unit packs
-Added 2 new estate privileges: 1 for Dutch nations (Dutch Water Lines/Burghers), 1 for steppe tribal nations (Steppe Colonization/Tribes) 
-Added 9 more loading tips
-Added triggered province modifier for the Druze sanctuary of Nabi Shu'ayb
-Baltic Order techs should be definitively fixed now as the previous fix was not properly implemented... please let this be the last time.
-German culture can spread in the Baltics when controlled by German tags
-Fixed rare bug where former Polish subjects would get their rulers and heirs replaced when the Fragmentation of Poland happens
-Fixed longstanding bug where England could not call their subject Normandy into any wars after the Norman conquest
-Byzantium should no longer lose to seperatists before the Crisis of the 11th Century
-Buffed the Golden Horde and the Ilkhanate upon spawning through their respective events
-Disallowed human players to tagswitch to the Mongols upon spawning
-Hohenstaufer Inheritance incident will no longer trigger without the Emperor dlc
-Many <3 development provinces in Europe now have their development boosted to 3 in the timeline once they are civilised
-Norway replaces Sweden as a suggested country in the 1054 bookmark (it fit better due to its potential role in the English conquest event chain)
-The Understaffed Electoral College event will become inactive when the Religious Leagues form
-Added an peace option for the Imperial Supremacy casus belli to end the Investiture Controversy
-Small rework to part of Aragon's mission tree structure
-Province warscore cost replaces claim duration in Aragon's age ability
-Sicily age ability nerfed
-Fixed some localisation and gfx in government reforms