@@ -8,6 +8,7 @@ capital = 5920
 
 #Counts of Sabbioneta
 1054.1.1 = {
+	override_country_name = SABBIONETA_NAME
 	monarch = {
 		name = "Ugo II"
 		dynasty = "Ugoning"
@@ -54,6 +55,7 @@ capital = 5920
 }
 
 1119.1.1 = {
+	restore_country_name = yes
 	capital = 499
 	government = republic
 	add_government_reform = italian_monarchy
