@@ -27,6 +27,7 @@ historical_rival = GLH
 	government = monarchy
 	add_government_reform = iqta
 	technology_group = muslim
+	override_country_name = TARKI_NAME
 }
 
 #Shamlakhate of Tarki
