@@ -78,6 +78,10 @@
  RONSBERG_NAME_ADJ: "Ronsberger"
  NOVOSIL_NAME: "Novosil"
  NOVOSIL_NAME_ADJ: "Novosilian"
+ TARKI_NAME: "Tarki"
+ TARKI_NAME_ADJ: "Tarkian"
+ SABBIONETA_NAME: "Sabbioneta"
+ SABBIONETA_NAME_ADJ: "Sabbioneti"
  OMIS: "Omiš"
  OMIS_ADJ: "Omišian"
  CANDIA: "Candia"
