@@ -78,6 +78,10 @@
  RONSBERG_NAME_ADJ: "Ronsbergisch"
  NOVOSIL_NAME: "Nowosil"
  NOVOSIL_NAME_ADJ: "Nowosilisch"
+ TARKI_NAME: "Tarki"
+ TARKI_NAME_ADJ: "Tarkisch"
+ SABBIONETA_NAME: "Sabbioneta"
+ SABBIONETA_NAME_ADJ: "Sabbionetisch"
  OMIS: "Omiš"
  OMIS_ADJ: "Omišisch"
  CANDIA: "Candia"
