@@ -10,6 +10,7 @@
 -Added the following monuments and associated events: Kaiserdom of Speyer, Polish Royal Salt Mines, Winter Palace of Neva, Aleppo Citadel, Tsarevets of Tarnovo
 -Overhauled the following custom event sets: Baltic Pagan
 -Eliminated generic unit models for many cultures when owning the respective unit packs
+-Added the following alternative country names: Tarki (Huns), Sabbioneta (Cremona)
 -Added 2 new estate privileges: 1 for Dutch nations (Dutch Water Lines/Burghers), 1 for steppe tribal nations (Steppe Colonization/Tribes) 
 -Added 9 more loading tips
 -Added triggered province modifier for the Druze sanctuary of Nabi Shu'ayb
